# apm

./: .gitattributes  .gitignore  .goreleaser.yaml  404.html  CONTRIBUTING.md  PLUGIN_DEVELOPMENT.md  README.md  SECURITY.md  SECURITY_EXPLAINED.md  TEAM_DOCUMENTATION.md  THREAT_MODEL.md  go.mod  go.sum  index.html  main.go  mcp.md  mkdocs.yml  security_report.txt  sitemap.xml
PLUGIN_API/: index.html
autofill_windows/: index.html
cmd/: inject.go
concepts/: index.html
contributing/: index.html
docs/: PLUGIN_API.md  autofill_windows.md  contributing.md  index.md
examples/: .apmignore
getting-started/: index.html
guides/: index.html
obfuscation/: harden_obf.go
reference/: index.html
rust/apm-native/: Cargo.toml
rust/apm-native/src/: cloud.rs  crypto.rs  faceid.rs  get.rs  lgit.rs  lib.rs  main.rs  vault.rs  vault_loader.rs
rust/faceid/: Cargo.toml
rust/faceid/src/: lib.rs
scripts/: build.ps1  build.sh  install.ps1  install.sh  test.ps1  test.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/: anomaly.go  apmignore.go  audit.go  audit_test.go  auth_logic.go  brute.go  cloud.go  cloud_diff.go  cloud_diff_test.go  cloud_ignore.go  cloud_plugins.go  cloud_test.go  cloud_token_parse_test.go  crypto_profiles_test.go  ephemeral_session.go  go.mod  go.sum  health.go  hello_stub.go  hello_windows.go  lgit.go  log_signing.go  main.go  mcp.go  mcp_integration_test.go  mcp_tools_test.go  mcp_transactions.go  policy.go  policy_security_test.go  policy_test.go  portability.go  quorum_recovery.go  recovery_codes.go  security.go  (+15 more)
(+220 files in other folders)
