[package]
name = "apm-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "pm-rust"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
libc = "0.2"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
nokhwa = { version = "0.10.11", default-features = false, features = ["input-native", "decoding"] }
rayon = "1.10"
argon2 = "0.5"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
dirs = "5.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
oauth2 = "4.4"
tokio = { version = "1.37", features = ["full"] }
base64 = "0.22"
